fixed the issue grid misalignment because of flex layout in gridstack widget

--- a/webroot/common/ui/scss/contrail.custom.scss
+++ b/webroot/common/ui/scss/contrail.custom.scss
@@ -2179,6 +2179,10 @@ body {
 }
 .item-container {
 
+    .contrail-grid {
+        display: block;
+        margin: 5px 15px 5px 15px;
+    }
     .zoom-scatter-chart-container {
         text.label {
             font-size: 11px;
